修正GetUser resp，顯示使用者資料
